[gd_scene load_steps=14 format=3 uid="uid://6d047vwdrti1"]

[ext_resource type="Script" path="res://Scripts/juego_contra_cpu.gd" id="1_slpvf"]
[ext_resource type="Texture2D" uid="uid://eeqwsw2f6bqd" path="res://Imagenes de elementos/Pantalla score.png" id="2_75s8k"]
[ext_resource type="Texture2D" uid="uid://cjdpkr1i5opsw" path="res://Imagenes de elementos/piedra.png" id="2_y3yjr"]
[ext_resource type="Texture2D" uid="uid://c2h2dw4fococn" path="res://Imagenes de elementos/papel.png" id="3_e32ik"]
[ext_resource type="Texture2D" uid="uid://d1376loo3soct" path="res://Imagenes de elementos/tijera.png" id="4_q6f2o"]
[ext_resource type="Texture2D" uid="uid://cn0yeqih3qndf" path="res://cuadro colores/piedra.png" id="5_56dml"]
[ext_resource type="Texture2D" uid="uid://d4hlgkec0flya" path="res://cuadro colores/tijera.png" id="7_kkoaa"]
[ext_resource type="Texture2D" uid="uid://du8lbm1ge0arh" path="res://cuadro colores/papel.png" id="9_8af5x"]
[ext_resource type="Texture2D" uid="uid://duiu05whqroga" path="res://Imagenes de elementos/Has perdido.png" id="10_62vt6"]
[ext_resource type="Texture2D" uid="uid://cka0o5es1clxg" path="res://Imagenes de elementos/boton reiniciar.png" id="10_yxfj8"]
[ext_resource type="Texture2D" uid="uid://da1vosci8ln4t" path="res://Imagenes de elementos/Has Ganado.png" id="11_l0jvh"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hrhon"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_twc3p"]

[node name="Juego contra cpu" type="Node2D"]
script = ExtResource("1_slpvf")

[node name="Monitor" type="Sprite2D" parent="."]
position = Vector2(569, 216)
scale = Vector2(0.733333, 0.646288)
texture = ExtResource("2_75s8k")

[node name="Fondo marcador" type="ColorRect" parent="."]
visible = false
offset_left = 356.0
offset_top = 75.0
offset_right = 782.0
offset_bottom = 255.0

[node name="Linea negra" type="ColorRect" parent="."]
offset_left = 560.0
offset_top = -35.0
offset_right = 575.0
offset_bottom = 664.0
color = Color(0, 0, 0, 1)

[node name="Puntos cpu" type="Label" parent="."]
offset_left = 650.0
offset_top = 90.0
offset_right = 690.0
offset_bottom = 183.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 65
text = "0	"

[node name="Puntos jugador" type="Label" parent="."]
offset_left = 433.0
offset_top = 90.0
offset_right = 473.0
offset_bottom = 183.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 65
text = "0"
metadata/_edit_use_anchors_ = true

[node name="Papel2" type="Sprite2D" parent="."]
visible = false
position = Vector2(916, 250)
scale = Vector2(0.0449883, 0.0401736)
texture = ExtResource("3_e32ik")

[node name="Papel3" type="Sprite2D" parent="."]
visible = false
position = Vector2(217, 247)
scale = Vector2(0.0449883, 0.0401736)
texture = ExtResource("3_e32ik")

[node name="Piedra2" type="Sprite2D" parent="."]
visible = false
position = Vector2(916, 250)
scale = Vector2(0.0935, 0.091)
texture = ExtResource("2_y3yjr")

[node name="Piedra3" type="Sprite2D" parent="."]
visible = false
position = Vector2(232, 247)
scale = Vector2(0.0935, 0.091)
texture = ExtResource("2_y3yjr")

[node name="Tijera2" type="Sprite2D" parent="."]
visible = false
position = Vector2(916, 231)
scale = Vector2(0.207042, 0.228058)
texture = ExtResource("4_q6f2o")

[node name="Tijera3" type="Sprite2D" parent="."]
visible = false
position = Vector2(235, 233)
scale = Vector2(0.207042, 0.228058)
texture = ExtResource("4_q6f2o")

[node name="Boton Reinicio" type="TextureButton" parent="."]
visible = false
offset_left = 498.0
offset_top = 474.0
offset_right = 640.0
offset_bottom = 608.0
texture_normal = ExtResource("10_yxfj8")
ignore_texture_size = true
stretch_mode = 0

[node name="Ganastes" type="Label" parent="."]
visible = false
offset_left = 366.0
offset_top = 183.0
offset_right = 568.0
offset_bottom = 250.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_outline_size = 14
theme_override_font_sizes/font_size = 40
text = "Ganastes"

[node name="Gano" type="Label" parent="."]
visible = false
offset_left = 619.0
offset_top = 183.0
offset_right = 824.0
offset_bottom = 250.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_outline_size = 16
theme_override_font_sizes/font_size = 40
text = "GanÃ³"

[node name="Empate2" type="Label" parent="."]
visible = false
offset_left = 378.0
offset_top = 169.0
offset_right = 583.0
offset_bottom = 236.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_outline_size = 16
theme_override_font_sizes/font_size = 45
text = "Empate"

[node name="Empate" type="Label" parent="."]
visible = false
offset_left = 594.0
offset_top = 169.0
offset_right = 799.0
offset_bottom = 236.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_outline_size = 16
theme_override_font_sizes/font_size = 45
text = "Empate"

[node name="Contenedor Objetos" type="ColorRect" parent="."]
visible = false
offset_left = -2.0
offset_top = 197.0
offset_right = 473.0
offset_bottom = 305.0
color = Color(0, 0.509804, 1, 1)

[node name="Cerrar" type="TextureButton" parent="Contenedor Objetos"]
layout_mode = 0
offset_left = 420.0
offset_top = 39.0
offset_right = 460.0
offset_bottom = 75.0
texture_normal = ExtResource("5_56dml")
ignore_texture_size = true
stretch_mode = 0

[node name="x" type="Label" parent="Contenedor Objetos/Cerrar"]
layout_mode = 0
offset_left = 11.0
offset_top = -1.0
offset_right = 53.0
offset_bottom = 38.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
text = "X"

[node name="Piedra" type="TextureButton" parent="Contenedor Objetos"]
layout_mode = 0
offset_left = 16.0
offset_top = 14.0
offset_right = 126.0
offset_bottom = 98.0
texture_normal = ExtResource("2_y3yjr")
texture_hover = ExtResource("5_56dml")
ignore_texture_size = true
stretch_mode = 0

[node name="Papel" type="TextureButton" parent="Contenedor Objetos"]
layout_mode = 0
offset_left = 161.0
offset_top = 18.0
offset_right = 232.0
offset_bottom = 84.0
texture_normal = ExtResource("3_e32ik")
texture_hover = ExtResource("7_kkoaa")
ignore_texture_size = true
stretch_mode = 0

[node name="Tijera" type="TextureButton" parent="Contenedor Objetos"]
layout_mode = 0
offset_left = 277.0
offset_top = 14.0
offset_right = 367.0
offset_bottom = 98.0
texture_normal = ExtResource("4_q6f2o")
texture_hover = ExtResource("9_8af5x")
ignore_texture_size = true
stretch_mode = 0

[node name="Activar objetos" type="TextureButton" parent="."]
offset_top = 174.0
offset_right = 55.0
offset_bottom = 248.0
texture_normal = ExtResource("9_8af5x")
ignore_texture_size = true
stretch_mode = 0

[node name=">" type="Label" parent="Activar objetos"]
layout_mode = 0
offset_left = 16.0
offset_top = -1.0
offset_right = 56.0
offset_bottom = 71.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = -2
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 50
text = ">"

[node name="Ganador animacion" type="CharacterBody2D" parent="."]

[node name="HasGanado" type="Sprite2D" parent="Ganador animacion"]
position = Vector2(-280, 255)
texture = ExtResource("11_l0jvh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ganador animacion"]
position = Vector2(-16, 0)
shape = SubResource("CapsuleShape2D_hrhon")
disabled = true

[node name="Perdedor animacion" type="CharacterBody2D" parent="."]

[node name="HasPerdido" type="Sprite2D" parent="Perdedor animacion"]
position = Vector2(-272, 256)
texture = ExtResource("10_62vt6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Perdedor animacion"]
shape = SubResource("CapsuleShape2D_twc3p")
disabled = true

[node name="boton menu" type="TextureButton" parent="."]
visible = false
offset_left = 473.0
offset_top = 403.0
offset_right = 663.0
offset_bottom = 582.0
texture_normal = ExtResource("10_yxfj8")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="."]
offset_left = 399.0
offset_top = 69.0
offset_right = 526.0
offset_bottom = 111.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
text = "Jugador 1"

[node name="Label2" type="Label" parent="."]
offset_left = 640.0
offset_top = 71.0
offset_right = 767.0
offset_bottom = 113.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
text = "CPU	"

[connection signal="pressed" from="Boton Reinicio" to="." method="_on_boton_reinicio_pressed"]
[connection signal="pressed" from="Contenedor Objetos/Cerrar" to="." method="_on_cerrar_pressed"]
[connection signal="pressed" from="Contenedor Objetos/Piedra" to="." method="_on_piedra_pressed"]
[connection signal="pressed" from="Contenedor Objetos/Papel" to="." method="_on_papel_pressed"]
[connection signal="pressed" from="Contenedor Objetos/Tijera" to="." method="_on_tijera_pressed"]
[connection signal="pressed" from="Activar objetos" to="." method="_on_activar_objetos_pressed"]
[connection signal="pressed" from="boton menu" to="." method="_on_boton_reiniciar_pressed"]
